--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
     <section id="hero" class="hero">
         <div class="hero-content">
-            <p class="greeting" style="align-self: flex-start; margin-left: 60px;">Hi! I am</p>
+            <p class="greeting" style="align-self: flex-start; margin-left: 60px;">Hello! I am</p>
             <h1 class="name-highlight">Naga Reshmi Bodepudi</h1>
             <p class="tagline">Building the Future with Code, Leading with Vision, and Writing Stories in Both Tech and Poetry.</p>
             <div class="rolling-text">
